[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "polygon-topology-augment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "albumentations>=2.0.8",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "opencv-python>=4.12.0.88",
    "pillow>=12.1.1",
    "scipy>=1.17.0",
    "tqdm>=4.67.1",
]

[project.scripts]
ringaug = "main:main"
rinaug = "main:main"

[tool.setuptools]
py-modules = ["main"]
packages = ["src"]
