# Packaging and project metadata for the PolyAug library and CLI.
[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "polyaug"
version = "0.1.5"
description = "Polygon topology augmentation CLI for segmentation datasets."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Operating System :: OS Independent",
]
dependencies = [
    "albumentations>=2.0.8",
    "matplotlib>=3.8",
    "numpy>=1.26,<2.3",
    "opencv-python>=4.9",
    "pillow>=10.0",
    "scipy>=1.11,<1.16",
    "tqdm>=4.66",
]

[project.scripts]
polyaug = "polyaug.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["polyaug*"]
